# led-gesture-control-ros2

./: README.md  package.xml  setup.cfg  setup.py
arduino/: led_control.ino
led_gesture_control/: finger_detector_node.py  led_controller_node.py
